Noch mehr i18n. Englische Übersetzung.

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -1,4 +1,4 @@
-//mainAppView.fxml
+#mainAppView.fxml
 ui.common.case_base=Fallbasis
 ui.menu.file=Datei
 ui.menu.file_exit=jCORA beenden
@@ -8,7 +8,7 @@ ui.menu.help=Hilfe
 ui.menu.help_about=Über jCORA
 ui.menu.help_online_help=Onlinehilfe
 
-//caseBaseView.fxml
+#caseBaseView.fxml
 ui.case_base_view.case_id=Fall-ID
 ui.case_base_view.search_id=Suche
 ui.case_base_view.search_id_placeholder=Suche nach Fall-ID...
@@ -16,11 +16,11 @@ ui.case_base_view.column_case_id=Fall-ID
 ui.case_base_view.column_show_case=Fall ansehen
 ui.case_base_view.column_delete_case=Fall löschen
 ui.case_base_view.tooltip_import_case=Fall importieren...
-//CaseBaseViewController
+#CaseBaseViewController
 ui.case_base_view.btn_show_case=Anzeigen
 ui.case_base_view.btn_delete_case=Löschen
 
-//caseView.fxml
+#caseView.fxml
 ui.case_view.navigation_panel_title=Navigation
 ui.case_view.help_panel_title=Legende
 ui.case_view.tooltip_save_case=Diesen Fall speichern
@@ -33,17 +33,17 @@ ui.case_view.tooltip_delete_datatype_property=Ausgewählte Zeile löschen
 ui.case_view.column_data_property_name=Eigenschaft
 ui.case_view.column_data_property_value=Wert
 ui.case_view.column_data_property_unit=Einheit
-//CaseViewController
+#CaseViewController
 ui.case_view.label_no_data_properties=Keine Daten vorhanden
 
-//MainAppViewController
+#MainAppViewController
 ui.query_view.title=Neue CBR-Anfrage
-//queryView.fxml
+#queryView.fxml
 ui.query_view.btn_start_request=Anfrage starten...
 ui.query_view.tab_new_case=Neuer Fall
 ui.query_view.tab_weights=Gewichte
 
-//addObjectPropertyView.fxml
+#addObjectPropertyView.fxml
 ui.add_object_property.label_object_property=Relation
 ui.add_object_property.label_instance=Instanz
 ui.add_object_property.placeholder_search_object_property=Suche Relation...
@@ -51,12 +51,12 @@ ui.add_object_property.placeholder_search_instance=Suche Instanz...
 ui.add_object_property.btn_add_instance=Neue Instanz...
 ui.add_object_property.btn_cancel=Abbrechen
 ui.add_object_property.btn_create=Hinzufügen
-//AddObjectPropertyViewController
+#AddObjectPropertyViewController
 ui.add_object_property.label_no_instances="Keine Instanzen vorhanden."
 ui.add_object_property.label_no_relations="Keine Relationen vorhanden."
 ui.add_object_property.not_initialized="Nicht initialisiert."
 
-//addInstanceView.fxml
+#addInstanceView.fxml
 ui.add_instance.label_name=Name
 ui.add_instance.label_class=Klasse
 ui.add_instance.placeholder_name=Name der Instanz
@@ -64,7 +64,7 @@ ui.add_instance.placeholder_class=Name der Klasse
 ui.add_instance.btn_create=Erstellen
 ui.add_instance.btn_cancel=Abbrechen
 
-//caseImportView.fxml
+#caseImportView.fxml
 ui.case_import.label_file=Datei
 ui.case_import.placeholder_file_name=Dateiname...
 ui.case_import.btn_choose_file=Auswählen
@@ -74,8 +74,36 @@ ui.case_import.placeholder_case_id=Fall-ID...
 ui.case_import.btn_import=Importieren
 ui.case_import.btn_cancel=Abbrechen
 
-//saveAsNewView.fxml
+#saveAsNewView.fxml
 ui.save_as_new.label_new_case_id=Neue Fall-ID
 ui.save_as_new.placeholder_new_case_id=Neue Fall-ID...
 ui.save_as_new.btn_save=Speichern
 ui.save_as_new.btn_cancel=Abbrechen
+
+#adaptionStack.fxml
+ui.adaption_stack.label_available_rules=Vorhandene Regeln
+ui.adaption_stack.label_selected_rules=Ausgewählte Regeln
+ui.adaption_stack.btn_cancel=Abbrechen
+ui.adaption_stack.btn_apply=Anwenden
+#AdaptionStackViewController
+ui.adaption_stack.label_no_rules_available=Keine Regeln verfügbar
+ui.adaption_stack.label_no_rules_selected=Keine Regeln ausgewählt
+
+#retrievalResultsView.fxml
+ui.retrieval_results.filter=Filter
+ui.retrieval_results.filter_placeholder=Zeige >= %
+ui.retrieval_results.filter_label=%
+ui.retrieval_results.column_case_id=Fall-ID
+ui.retrieval_results.column_similarity=Ähnlichkeit
+ui.retrieval_results.column_adapt=Adaptieren
+ui.retrieval_results.column_show=Anzeigen
+#MainAppViewController
+ui.retrieval_results.tab_title=Anfrageergebnisse
+#RetrievalResultsViewController
+ui.retrieval_results.btn_show=Anzeigen
+ui.retrieval_results.btn_adapt=Adaptieren
+ui.retrieval_results.results_placeholder=Keine Ergebnisse
+
+#rules
+rule.copy_rule.name=Kopiere Lösung
+rule.copy_rule.description=Kopiert die Lösung des ausgewählten Falles.
