--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -1,13 +1,109 @@
+#mainAppView.fxml
 ui.common.case_base=Case-base
-
 ui.menu.file=File
 ui.menu.file_exit=Exit jCORA
 ui.menu.cbr=CBR
-ui.menu.cbr_start_cycle=Start CBR-cycle...
+ui.menu.cbr_start_cycle=New CBR-Request
 ui.menu.help=Help
 ui.menu.help_about=About jCORA
-ui.menu.help_online_help=Online-help
+ui.menu.help_online_help=Online Documentation
 
+#caseBaseView.fxml
 ui.case_base_view.case_id=Case-ID
-ui.case_base_view.show_case=Show case
-ui.case_base_view.delete_case=Delete case
+ui.case_base_view.search_id=Search
+ui.case_base_view.search_id_placeholder=Search for Case-ID...
+ui.case_base_view.column_case_id=Case-ID
+ui.case_base_view.column_show_case=Show Case
+ui.case_base_view.column_delete_case=Delete Case
+ui.case_base_view.tooltip_import_case=Import Case...
+#CaseBaseViewController
+ui.case_base_view.btn_show_case=Show
+ui.case_base_view.btn_delete_case=Delete
+
+#caseView.fxml
+ui.case_view.navigation_panel_title=Navigation
+ui.case_view.help_panel_title=Legend
+ui.case_view.tooltip_save_case=Save this Case
+ui.case_view.tooltip_save_case_as_new=Save this Case as new Case
+ui.case_view.tooltip_export_as_xml=Export as RDF/XML-File
+ui.case_view.tooltip_export_as_image=Export as PNG-Image
+ui.case_view.label_datatype_property=Data
+ui.case_view.tooltip_add_datatype_property=Add Data
+ui.case_view.tooltip_delete_datatype_property=Delete Selected Column
+ui.case_view.column_data_property_name=Property
+ui.case_view.column_data_property_value=Value
+ui.case_view.column_data_property_unit=Unit
+#CaseViewController
+ui.case_view.label_no_data_properties=No Data available
+
+#MainAppViewController
+ui.query_view.title=New Case-Description
+#queryView.fxml
+ui.query_view.btn_start_request=Start Request...
+ui.query_view.tab_new_case=New Case
+ui.query_view.tab_weights=Weights
+
+#addObjectPropertyView.fxml
+ui.add_object_property.label_object_property=Relation
+ui.add_object_property.label_instance=Instance
+ui.add_object_property.placeholder_search_object_property=Search Relation...
+ui.add_object_property.placeholder_search_instance=Search Instance...
+ui.add_object_property.btn_add_instance=New Instanz...
+ui.add_object_property.btn_cancel=Cancel
+ui.add_object_property.btn_create=Add
+#AddObjectPropertyViewController
+ui.add_object_property.label_no_instances=No instances Available.
+ui.add_object_property.label_no_relations=No Relations Available.
+ui.add_object_property.not_initialized=Not initialized.
+
+#addInstanceView.fxml
+ui.add_instance.label_name=Name
+ui.add_instance.label_class=Class
+ui.add_instance.placeholder_name=Instance Name...
+ui.add_instance.placeholder_class=Class Name...
+ui.add_instance.btn_create=Create
+ui.add_instance.btn_cancel=Cancel
+
+#caseImportView.fxml
+ui.case_import.label_file=File
+ui.case_import.placeholder_file_name=Filename...
+ui.case_import.btn_choose_file=Choose
+ui.case_import.label_file_format=File Format
+ui.case_import.label_case_id=Case-ID
+ui.case_import.placeholder_case_id=Case-ID...
+ui.case_import.btn_import=Import
+ui.case_import.btn_cancel=Cancel
+
+#saveAsNewView.fxml
+ui.save_as_new.label_new_case_id=New Case-ID
+ui.save_as_new.placeholder_new_case_id=New Case-ID...
+ui.save_as_new.btn_save=Save
+ui.save_as_new.btn_cancel=Cancel
+
+#adaptionStack.fxml
+ui.adaption_stack.label_available_rules=Available Rules
+ui.adaption_stack.label_selected_rules=Selected Rules
+ui.adaption_stack.btn_cancel=Cancel
+ui.adaption_stack.btn_apply=Apply
+#AdaptionStackViewController
+ui.adaption_stack.label_no_rules_available=No Rules Available
+ui.adaption_stack.label_no_rules_selected=No Rules Selected
+
+//retrievalResultsView.fxml
+ui.retrieval_results.filter=Filter
+ui.retrieval_results.filter_placeholder=Show >= %
+ui.retrieval_results.filter_label=%
+ui.retrieval_results.column_case_id=Case-ID
+ui.retrieval_results.column_similarity=Similarity
+ui.retrieval_results.column_adapt=Adapt
+ui.retrieval_results.column_show=Show
+#MainAppViewController
+ui.retrieval_results.tab_title=Request Results
+#RetrievalResultsViewController
+ui.retrieval_results.btn_show=Show
+ui.retrieval_results.btn_adapt=Adapt
+ui.retrieval_results.results_placeholder=No Results
+
+#rules
+rule.copy_rule.name=Copy Solution
+rule.copy_rule.description=Copies the selected cases solution.
