Dialog zum Anzeigen von Throwables als Letzte-Rettun-Fehlerbehandlung. TODO: Flächendeckend implementieren

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -107,3 +107,8 @@ ui.retrieval_results.results_placeholder=Keine Ergebnisse
 #rules
 rule.copy_rule.name=Kopiere Lösung
 rule.copy_rule.description=Kopiert die Lösung des ausgewählten Falles.
+
+#throwableErrorView.fxml
+ui.throwable_error.label=Ein Fehler ist aufgetreten:
+ui.throwable_error.btn_quit_app=jCORA beenden
+ui.throwable_error.btn_ignore=Ignorieren
