--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -107,3 +107,8 @@ ui.retrieval_results.results_placeholder=No Results
 #rules
 rule.copy_rule.name=Copy Solution
 rule.copy_rule.description=Copies the selected cases solution.
+
+#throwableErrorView.fxml
+ui.throwable_error.label=An Error occured:
+ui.throwable_error.btn_quit_app=Quit jCORA
+ui.throwable_error.btn_ignore=Ignore
