i18n-unterstützung für Ontologien. Wird eine Ontologie-Resource angezeigt, wird zunächst nach einem Label in der aktuellen Programmsprache gesucht und ggf. angezeigt. Existiert kein Label in der aktuellen Sprache, wird der technische Name angezeigt.
Beim Anlegen einer Instanz wird jetzt zwischen dem technischen Namen der Instanz und dem Label unterschieden. Labels werden derzeit _immer_ in der aktuellen Programmsprache angelegt.

--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -48,7 +48,7 @@ ui.add_object_property.label_object_property=Relation
 ui.add_object_property.label_instance=Instance
 ui.add_object_property.placeholder_search_object_property=Search Relation...
 ui.add_object_property.placeholder_search_instance=Search Instance...
-ui.add_object_property.btn_add_instance=New Instanz...
+ui.add_object_property.btn_add_instance=New Instance...
 ui.add_object_property.btn_cancel=Cancel
 ui.add_object_property.btn_create=Add
 #AddObjectPropertyViewController
@@ -57,10 +57,12 @@ ui.add_object_property.label_no_relations=No Relations Available.
 ui.add_object_property.not_initialized=Not initialized.
 
 #addInstanceView.fxml
-ui.add_instance.label_name=Name
+ui.add_instance.label_name=Technical Name
+ui.add_instance.label_label=Display Name
 ui.add_instance.label_class=Class
 ui.add_instance.placeholder_name=Instance Name...
 ui.add_instance.placeholder_class=Class Name...
+ui.add_instance.placeholder_label=Display Name...
 ui.add_instance.btn_create=Create
 ui.add_instance.btn_cancel=Cancel
 
