Deutsche Übersetzungen vergessen...

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -57,10 +57,12 @@ ui.add_object_property.label_no_relations="Keine Relationen vorhanden."
 ui.add_object_property.not_initialized="Nicht initialisiert."
 
 #addInstanceView.fxml
-ui.add_instance.label_name=Name
+ui.add_instance.label_name=Technischer Name
+ui.add_instance.label_label=Angezeigter Name
 ui.add_instance.label_class=Klasse
 ui.add_instance.placeholder_name=Name der Instanz
 ui.add_instance.placeholder_class=Name der Klasse
+ui.add_instance.placeholder_label=Angezeigter Name...
 ui.add_instance.btn_create=Erstellen
 ui.add_instance.btn_cancel=Abbrechen
 
