Beim Programmstart wird jetzt automatisch die Systemsprache als Anwendungssprache festgelegt (falls möglich). Die Systemsprache lässt sich über das JVM-Argument "-Duser.language=en" überschreiben (hier en=Englisch).
DataProperty Namen werden jetzt korrekt mittels Labels angezeigt.

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -61,7 +61,7 @@ ui.add_instance.label_name=Technischer Name
 ui.add_instance.label_label=Angezeigter Name
 ui.add_instance.label_class=Klasse
 ui.add_instance.placeholder_name=Name der Instanz
-ui.add_instance.placeholder_class=Name der Klasse
+ui.add_instance.placeholder_class=Unten auswählen...
 ui.add_instance.placeholder_label=Angezeigter Name...
 ui.add_instance.btn_create=Erstellen
 ui.add_instance.btn_cancel=Abbrechen
