--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -61,7 +61,7 @@ ui.add_instance.label_name=Technical Name
 ui.add_instance.label_label=Display Name
 ui.add_instance.label_class=Class
 ui.add_instance.placeholder_name=Instance Name...
-ui.add_instance.placeholder_class=Class Name...
+ui.add_instance.placeholder_class=Select below...
 ui.add_instance.placeholder_label=Display Name...
 ui.add_instance.btn_create=Create
 ui.add_instance.btn_cancel=Cancel
