Instanzen können jetzt mehrsprachig angelegt werden. Dazu wurde ein neuer Dialog zum Übersetzten von Strings hinzugefügt.

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -65,6 +65,8 @@ ui.add_instance.placeholder_class=Unten auswählen...
 ui.add_instance.placeholder_label=Angezeigter Name...
 ui.add_instance.btn_create=Erstellen
 ui.add_instance.btn_cancel=Abbrechen
+ui.add_instance.btn_change_label=Ändern
+ui.add_instance.title=Neue Instanz
 
 #caseImportView.fxml
 ui.case_import.label_file=Datei
@@ -114,3 +116,11 @@ rule.copy_rule.description=Kopiert die Lösung des ausgewählten Falles.
 ui.throwable_error.label=Ein Fehler ist aufgetreten:
 ui.throwable_error.btn_quit_app=jCORA beenden
 ui.throwable_error.btn_ignore=Ignorieren
+
+#translateStringView.fxml
+ui.translate.primary_language=Primäre Sprache
+ui.translate.language=Sprache
+ui.translate.string=Text
+ui.translate.btn_cancel=Abbrechen
+ui.translate.btn_ok=Übernehmen
+ui.translate.title=Übersetzungen
