--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -65,6 +65,8 @@ ui.add_instance.placeholder_class=Select below...
 ui.add_instance.placeholder_label=Display Name...
 ui.add_instance.btn_create=Create
 ui.add_instance.btn_cancel=Cancel
+ui.add_instance.btn_change_label=Change...
+ui.add_instance.title=New Instance
 
 #caseImportView.fxml
 ui.case_import.label_file=File
@@ -114,3 +116,12 @@ rule.copy_rule.description=Copies the selected cases solution.
 ui.throwable_error.label=An Error occured:
 ui.throwable_error.btn_quit_app=Quit jCORA
 ui.throwable_error.btn_ignore=Ignore
+
+
+#translateStringView.fxml
+ui.translate.primary_language=Primary Language
+ui.translate.language=Language
+ui.translate.string=Text
+ui.translate.btn_cancel=Cancel
+ui.translate.btn_ok=Apply
+ui.translate.title=Translations
