Das NodeMenu (Rechtsklick-Popup in der Fall-Graph-Ansicht) ist jetzt mehrsprachig.

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -124,3 +124,7 @@ ui.translate.string=Text
 ui.translate.btn_cancel=Abbrechen
 ui.translate.btn_ok=Übernehmen
 ui.translate.title=Übersetzungen
+
+#NodeMenu
+ui.node_menu.item_add_instance=Relation hinzufügen...
+ui.node_menu.item_remove_instance=Instanz entfernen...
