--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -93,7 +93,7 @@ ui.adaption_stack.btn_apply=Apply
 ui.adaption_stack.label_no_rules_available=No Rules Available
 ui.adaption_stack.label_no_rules_selected=No Rules Selected
 
-//retrievalResultsView.fxml
+#retrievalResultsView.fxml
 ui.retrieval_results.filter=Filter
 ui.retrieval_results.filter_placeholder=Show >= %
 ui.retrieval_results.filter_label=%
@@ -125,3 +125,7 @@ ui.translate.string=Text
 ui.translate.btn_cancel=Cancel
 ui.translate.btn_ok=Apply
 ui.translate.title=Translations
+
+#NodeMenu
+ui.node_menu.item_add_instance=Add Relation...
+ui.node_menu.item_remove_instance=Remove Instance...
