Panel zum einstellen der Retrieval-Gewichte implementiert.

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -127,3 +127,14 @@ ui.translate.title=Übersetzungen
 #NodeMenu
 ui.node_menu.item_add_instance=Relation hinzufügen...
 ui.node_menu.item_remove_instance=Instanz entfernen...
+
+#weightsView.fxml
+ui.weights.column_property=Relation
+ui.weights.column_weight=Gewicht
+ui.weights.column_percent=%
+ui.weights.btn_zero_tooltip=Setzt alle Gewichte auf null Prozent.
+ui.weights.btn_full_tooltip=Setzt alle Gewichte auf hundert Prozent.
+ui.weights.btn_save_tooltip=Speichert das aktuelle Gewichtsprofil.
+ui.weights.btn_load_tooltip=Lädt ein Gewichtsprofil.
+ui.weights.dialog_save_profile=Speichere das aktuelle Profil
+ui.weights.dialog_load_profile=Lade ein Profil
