--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -128,3 +128,14 @@ ui.translate.title=Translations
 #NodeMenu
 ui.node_menu.item_add_instance=Add Relation...
 ui.node_menu.item_remove_instance=Remove Instance...
+
+#weightsView.fxml
+ui.weights.column_property=Relation
+ui.weights.column_weight=Weight
+ui.weights.column_percent=%
+ui.weights.btn_zero_tooltip=Sets all weights to zero percent.
+ui.weights.btn_full_tooltip=Sets all weights to one hundred percent.
+ui.weights.btn_save_tooltip=Saves the current weight profile.
+ui.weights.btn_load_tooltip=Loads a weight profile.
+ui.weights.dialog_save_profile=Save the current weight profile
+ui.weights.dialog_load_profile=Load a previously saved profile
