Relationen können nun entfernt werden.

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -52,8 +52,8 @@ ui.add_object_property.btn_add_instance=Neue Instanz...
 ui.add_object_property.btn_cancel=Abbrechen
 ui.add_object_property.btn_create=Hinzufügen
 #AddObjectPropertyViewController
-ui.add_object_property.label_no_instances="Keine Instanzen vorhanden."
-ui.add_object_property.label_no_relations="Keine Relationen vorhanden."
+ui.add_object_property.label_no_instances=Keine Instanzen vorhanden.
+ui.add_object_property.label_no_relations=Keine Relationen vorhanden.
 ui.add_object_property.not_initialized="Nicht initialisiert."
 
 #addInstanceView.fxml
