Funktionalität zum Erstellen von CBR-Fallbeschreibungen aus vorhandenen Fällen hinzugefügt.

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -127,6 +127,8 @@ ui.translate.title=Übersetzungen
 #NodeMenu
 ui.node_menu.item_add_instance=Relation hinzufügen...
 ui.node_menu.item_remove_instance=Instanz entfernen...
+#EdgeMenu
+ui.edge_menu.item_remove_relation=Relation entfernen...
 
 #weightsView.fxml
 ui.weights.column_property=Relation
