--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -128,6 +128,8 @@ ui.translate.title=Translations
 #NodeMenu
 ui.node_menu.item_add_instance=Add Relation...
 ui.node_menu.item_remove_instance=Remove Instance...
+#EdgeMenu
+ui.edge_menu.item_remove_relation=Remove Relation...
 
 #weightsView.fxml
 ui.weights.column_property=Relation
