Die meisten Einstellungen sind jetzt über einen Dialog änderbar (Datei -> Einstellungen). Einige vergessene Übersetzungen nachgetragen. An einigen Stellen wurde die Klasse ThrowableErrorViewController direkt verwendet - statt dessen wird jetzt Commons.show[Fatal]Exception genutzt

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -1,6 +1,46 @@
+#Commons
+#waitView.fxml
+ui.commons.waitView.defaultText=Bitte warten...
+
+#Settings
+#settingsView.fxml
+ui.settings.save=Speichern
+ui.settings.cancel=Abbrechen
+ui.settings.reset=Zurücksetzen
+ui.settings.tab.language=Sprache
+ui.settings.tab.casebase=Fallbasis
+ui.settings.tab.casestructure=Fallstruktur
+#SettingsViewController
+ui.settings.title=Einstellungen
+ui.settings.confirm_restart.title=Neustart der Anwendung notwendig
+ui.settings.confirm_restart.header=Änderungen speichern?
+ui.settings.confirm_restart.text=Achtung: Nach dem Speichern der Änderungen müssen Sie die Anwendung neu Starten. \nMöchten sie die dennoch fortfahren?
+#language.fxml
+ui.settings.lang.language=Sprache
+#caseBase.fxml
+ui.settings.cb.casebase=Fallbasis
+ui.settings.cb.domainModelFile=Domänenontologie
+ui.settings.cb.namespace=Namensraum (Domäne)
+ui.settings.cb.select_casebase=Auswählen
+ui.settings.cb.select_domainModelFile=Auswählen
+#caseStructure.fxml
+ui.settings.case_struct.concept_case=Konzept "Fall"
+ui.settings.case_struct.concept_description=Konzept "Fallbeschreibung"
+ui.settings.case_struct.concept_solution=Konzept "Falllösung"
+ui.settings.case_struct.concept_justification=Konzept "Fallbewertung"
+ui.settings.case_struct.property_description=Relation "hatFallbeschreibung"
+ui.settings.case_struct.property_solution=Relation "hatFalllösung"
+ui.settings.case_struct.property_justification=Relation "hatFallbewertung"
+ui.settings.case_struct.instance_case=Instanzname "Fall"
+ui.settings.case_struct.instance_description=Instanzname "Fallbeschreibung"
+ui.settings.case_struct.instance_solution=Instanzname "Falllösung"
+ui.settings.case_struct.instance_justification=Instanzname "Fallbewertung"
+
 #mainAppView.fxml
 ui.common.case_base=Fallbasis
 ui.menu.file=Datei
+ui.menu.file_sparql=SPARQL
+ui.menu.file_settings=Einstellungen
 ui.menu.file_exit=jCORA beenden
 ui.menu.cbr=CBR
 ui.menu.cbr_start_cycle=Neue CBR-Anfrage...
@@ -19,10 +59,11 @@ ui.case_base_view.tooltip_import_case=Fall importieren...
 #CaseBaseViewController
 ui.case_base_view.btn_show_case=Anzeigen
 ui.case_base_view.btn_delete_case=Löschen
+ui.case_base_placeholder_empty=Keine Fälle in der Fallbasis
+ui.case_base_placeholder_error_loading=Beim Laden der Fallbasis ist ein Fehler aufgetreten.
 
 #cbQuery...fxml
 ui.cbquery.editor_title=SPARQL SELECT Anfrage
-ui.cbquery.menu_entry=SPARQL
 
 #caseView.fxml
 ui.case_view.navigation_panel_title=Navigation
@@ -148,3 +189,12 @@ ui.weights.btn_save_tooltip=Speichert das aktuelle Gewichtsprofil.
 ui.weights.btn_load_tooltip=Lädt ein Gewichtsprofil.
 ui.weights.dialog_save_profile=Speichere das aktuelle Profil
 ui.weights.dialog_load_profile=Lade ein Profil
+
+#editDPGeneric.fxml
+ui.dataprop.instance_name=Instanz
+ui.dataprop.attribut_name=Attribut
+ui.dataprop.datatype_name=Datentyp
+ui.dataprop.value=Wert
+ui.dataprop.value_placeholder=Wert...
+ui.dataprop.cancel=Abbrechen
+ui.dataprop.save=Übernehmen
