--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -1,6 +1,46 @@
+#Commons
+#waitView.fxml
+ui.commons.waitView.defaultText=Please wait...
+
+#Settings
+#settingsView.fxml
+ui.settings.save=Save
+ui.settings.cancel=Cancel
+ui.settings.reset=Reset
+ui.settings.tab.language=Language
+ui.settings.tab.casebase=Case-base
+ui.settings.tab.casestructure=Case structure
+#SettingsViewController
+ui.settings.title=Settings
+ui.settings.confirm_restart.title=Application restart required
+ui.settings.confirm_restart.header=Save settings?
+ui.settings.confirm_restart.text=After saving the settings, the application has to be restarted. \nWould you like to proceed?
+#language.fxml
+ui.settings.lang.language=Language
+#caseBase.fxml
+ui.settings.cb.casebase=Case Base
+ui.settings.cb.domainModelFile=Domain Ontology
+ui.settings.cb.namespace=Namespace (Domain)
+ui.settings.cb.select_casebase=Select
+ui.settings.cb.select_domainModelFile=Select
+#caseStructure.fxml
+ui.settings.case_struct.concept_case=Concept "Case"
+ui.settings.case_struct.concept_description=Concept "Case Description"
+ui.settings.case_struct.concept_solution=Concept "Case Solution"
+ui.settings.case_struct.concept_justification=Concept "Case Justification"
+ui.settings.case_struct.property_description=Property "hasDescription"
+ui.settings.case_struct.property_solution=Property "hasSolution"
+ui.settings.case_struct.property_justification=Property "hasJustification"
+ui.settings.case_struct.instance_case=Instance name "Case"
+ui.settings.case_struct.instance_description=Instance name "Case Description"
+ui.settings.case_struct.instance_solution=Instance name "Case Solution"
+ui.settings.case_struct.instance_justification=Instance name "Case Justification"
+
 #mainAppView.fxml
 ui.common.case_base=Case-base
 ui.menu.file=File
+ui.menu.file_sparql=SPARQL
+ui.menu.file_settings=Settings
 ui.menu.file_exit=Exit jCORA
 ui.menu.cbr=CBR
 ui.menu.cbr_start_cycle=New CBR-Request
@@ -19,11 +59,12 @@ ui.case_base_view.tooltip_import_case=Import Case...
 #CaseBaseViewController
 ui.case_base_view.btn_show_case=Show
 ui.case_base_view.btn_delete_case=Delete
+ui.case_base_placeholder_empty=Case-base is empty.
+ui.case_base_placeholder_error_loading=An error occured while loading the case-base.
 
 
 #cbQuery...fxml
 ui.cbquery.editor_title=SPARQL SELECT query
-ui.cbquery.menu_entry=SPARQL
 
 #caseView.fxml
 ui.case_view.navigation_panel_title=Navigation
@@ -150,3 +191,12 @@ ui.weights.btn_save_tooltip=Saves the current weight profile.
 ui.weights.btn_load_tooltip=Loads a weight profile.
 ui.weights.dialog_save_profile=Save the current weight profile
 ui.weights.dialog_load_profile=Load a previously saved profile
+
+#editDPGeneric.fxml
+ui.dataprop.instance_name=Instance
+ui.dataprop.attribut_name=Attribut
+ui.dataprop.datatype_name=Datatype
+ui.dataprop.value=Value
+ui.dataprop.value_placeholder=Value...
+ui.dataprop.cancel=Cancel
+ui.dataprop.save=Save
