Fehler beim Löschen von Relationen behoben (es wurde aus einer Liste gelöscht, wärend über diese iteriert wurde) Option zum rekursiven Löschen von Relationen hinzugefügt. Dabei werden alle nachfolgenden Relationen und Instanzen gelöscht (nicht nur die Relation, wie vorher)

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -178,6 +178,7 @@ ui.node_menu.item_add_instance=Relation hinzufügen...
 ui.node_menu.item_remove_instance=Instanz entfernen...
 #EdgeMenu
 ui.edge_menu.item_remove_relation=Relation entfernen...
+ui.edge_menu.item_remove_relation_recursive=Relation rekursiv entfernen...
 
 #weightsView.fxml
 ui.weights.column_property=Relation
