--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -176,10 +176,11 @@ ui.translate.btn_ok=Apply
 ui.translate.title=Translations
 
 #NodeMenu
-ui.node_menu.item_add_instance=Add Relation...
-ui.node_menu.item_remove_instance=Remove Instance...
+ui.node_menu.item_add_instance=Add relation...
+ui.node_menu.item_remove_instance=Remove instance...
 #EdgeMenu
-ui.edge_menu.item_remove_relation=Remove Relation...
+ui.edge_menu.item_remove_relation=Remove relation...
+ui.edge_menu.item_remove_relation_recursive=Remove relation recursive...
 
 #weightsView.fxml
 ui.weights.column_property=Relation
