Ein bisschen aufgeräumt...

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -1,3 +1,5 @@
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
 #Commons
 #waitView.fxml
 ui.commons.waitView.defaultText=Bitte warten...
