Im CaseViewer wird jetzt die ausgewählte Instanz über den DataProperties angezeigt, sodass klarer ist, welche DataProperties angezeigt werden.

--- a/src/main/resources/i18n/i18n_de.properties
+++ b/src/main/resources/i18n/i18n_de.properties
@@ -76,6 +76,7 @@ ui.case_view.tooltip_open_as_cbr_request=Aus diesem Fall eine CBR-Anfrage erzeug
 ui.case_view.tooltip_export_as_xml=Diesen Fall im RDF/XML-Format exportieren
 ui.case_view.tooltip_export_as_image=Den Fall-Graphen als PNG-Bild speichern
 ui.case_view.label_datatype_property=Attribute
+ui.case_view.label_datatype_property_no_selection=(Keine Auswahl)
 ui.case_view.tooltip_add_datatype_property=Attribut hinzufügen
 ui.case_view.tooltip_delete_datatype_property=Ausgewähltes Attribut löschen
 ui.case_view.column_data_property_name=Attribut
@@ -106,6 +107,7 @@ ui.add_object_property.btn_create=Hinzufügen
 ui.add_object_property.label_no_instances=Keine Instanzen vorhanden.
 ui.add_object_property.label_no_relations=Keine Relationen vorhanden.
 ui.add_object_property.not_initialized="Nicht initialisiert."
+ui.add_object_property.title=Relation hinzufügen
 
 #addInstanceView.fxml
 ui.add_instance.label_name=Eindeutiger Name
@@ -119,6 +121,7 @@ ui.add_instance.btn_cancel=Abbrechen
 ui.add_instance.title=Neue Instanz
 
 #caseImportView.fxml
+ui.case_import.title=Fall importieren
 ui.case_import.label_file=Datei
 ui.case_import.placeholder_file_name=Dateiname...
 ui.case_import.btn_choose_file=Auswählen
@@ -133,6 +136,7 @@ ui.save_as_new.label_new_case_id=Neue Fall-ID
 ui.save_as_new.placeholder_new_case_id=Neue Fall-ID...
 ui.save_as_new.btn_save=Speichern
 ui.save_as_new.btn_cancel=Abbrechen
+ui.save_as_new.title=Neue Fall-ID
 
 #adaptionStack.fxml
 ui.adaption_stack.label_available_rules=Vorhandene Regeln
