--- a/src/main/resources/i18n/i18n_en.properties
+++ b/src/main/resources/i18n/i18n_en.properties
@@ -76,6 +76,7 @@ ui.case_view.tooltip_open_as_cbr_request=Create a new CBR-Request from this Case
 ui.case_view.tooltip_export_as_xml=Export as RDF/XML-File
 ui.case_view.tooltip_export_as_image=Export as PNG-Image
 ui.case_view.label_datatype_property=Data
+ui.case_view.label_datatype_property_no_selection=(No Selection)
 ui.case_view.tooltip_add_datatype_property=Add Data
 ui.case_view.tooltip_delete_datatype_property=Delete Selected Column
 ui.case_view.column_data_property_name=Property
@@ -106,6 +107,7 @@ ui.add_object_property.btn_create=Add
 ui.add_object_property.label_no_instances=No instances Available.
 ui.add_object_property.label_no_relations=No Relations Available.
 ui.add_object_property.not_initialized=Not initialized.
+ui.add_object_property.title=Add Relation
 
 #addInstanceView.fxml
 ui.add_instance.label_name=Technical Name
@@ -119,6 +121,7 @@ ui.add_instance.btn_cancel=Cancel
 ui.add_instance.title=New Instance
 
 #caseImportView.fxml
+ui.case_import.title=Fall importieren
 ui.case_import.label_file=File
 ui.case_import.placeholder_file_name=Filename...
 ui.case_import.btn_choose_file=Choose
@@ -133,6 +136,7 @@ ui.save_as_new.label_new_case_id=New Case-ID
 ui.save_as_new.placeholder_new_case_id=New Case-ID...
 ui.save_as_new.btn_save=Save
 ui.save_as_new.btn_cancel=Cancel
+ui.save_as_new.title=New Case Id
 
 #adaptionStack.fxml
 ui.adaption_stack.label_available_rules=Available Rules
